Assets/Resources/Generated/TS/TSParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Developer Projects/Unity/Balls/Assets/Scripts/TS/Grammars/TS.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TS {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class TSParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		STRATOM=25, TAGATOM=26, OP_EQ=27, OP_NE=28, OP_GE=29, OP_LE=30, OP_AND=31, 
		OP_OR=32, OP_COLONCOLON=33, OP_MINUSMINUS=34, OP_PLUSPLUS=35, OP_STREQ=36, 
		OP_STRNE=37, OP_SHL=38, OP_SHR=39, OP_PLASN=40, OP_MIASN=41, OP_MLASN=42, 
		OP_DVASN=43, OP_MODASN=44, OP_ANDASN=45, OP_XORASN=46, OP_ORASN=47, OP_SLASN=48, 
		OP_SRASN=49, OP_CAT=50, RW_CASEOR=51, RW_BREAK=52, RW_RETURN=53, RW_ELSE=54, 
		RW_WHILE=55, RW_IF=56, RW_FOR=57, RW_CONTINUE=58, RW_DEFINE=59, RW_DECLARE=60, 
		RW_DATABLOCK=61, RW_CASE=62, RW_SWITCHSTR=63, RW_SWITCH=64, RW_DEFAULT=65, 
		RW_PACKAGE=66, FLTCONST=67, VAR=68, IDENT=69, INTCONST=70, BlockComment=71, 
		LineComment=72, WS=73;
	public const int
		RULE_start = 0, RULE_decl = 1, RULE_package_decl = 2, RULE_fn_decl_stmt = 3, 
		RULE_var_list = 4, RULE_statement_list = 5, RULE_stmt = 6, RULE_datablock_stmt = 7, 
		RULE_object_decl = 8, RULE_parent_block = 9, RULE_object_name = 10, RULE_object_args = 11, 
		RULE_object_declare_block = 12, RULE_object_decl_list = 13, RULE_stmt_block = 14, 
		RULE_switch_stmt = 15, RULE_case_block = 16, RULE_case_expr = 17, RULE_if_stmt = 18, 
		RULE_while_stmt = 19, RULE_for_stmt = 20, RULE_expression_stmt = 21, RULE_slot_assign_list = 22, 
		RULE_slot_assign = 23, RULE_aidx_expr = 24, RULE_expr_list_decl = 25, 
		RULE_expr_list = 26, RULE_expr = 27, RULE_class_name_expr = 28, RULE_assign_op_struct = 29, 
		RULE_stmt_expr = 30;
	public static readonly string[] ruleNames = {
		"start", "decl", "package_decl", "fn_decl_stmt", "var_list", "statement_list", 
		"stmt", "datablock_stmt", "object_decl", "parent_block", "object_name", 
		"object_args", "object_declare_block", "object_decl_list", "stmt_block", 
		"switch_stmt", "case_block", "case_expr", "if_stmt", "while_stmt", "for_stmt", 
		"expression_stmt", "slot_assign_list", "slot_assign", "aidx_expr", "expr_list_decl", 
		"expr_list", "expr", "class_name_expr", "assign_op_struct", "stmt_expr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "';'", "'('", "')'", "','", "':'", "'='", "'['", "']'", 
		"'.'", "'^'", "'%'", "'&'", "'|'", "'+'", "'-'", "'*'", "'/'", "'?'", 
		"'<'", "'>'", "'!'", "'~'", null, null, "'=='", "'!='", "'>='", "'<='", 
		"'&&'", "'||'", "'::'", "'--'", "'++'", "'$='", "'!$='", "'<<'", "'>>'", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'<<='", 
		"'>>='", null, "'or'", "'break'", "'return'", "'else'", "'while'", "'if'", 
		"'for'", "'continue'", "'function'", "'new'", "'datablock'", "'case'", 
		"'switch$'", "'switch'", "'default'", "'package'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "STRATOM", "TAGATOM", "OP_EQ", "OP_NE", "OP_GE", "OP_LE", "OP_AND", 
		"OP_OR", "OP_COLONCOLON", "OP_MINUSMINUS", "OP_PLUSPLUS", "OP_STREQ", 
		"OP_STRNE", "OP_SHL", "OP_SHR", "OP_PLASN", "OP_MIASN", "OP_MLASN", "OP_DVASN", 
		"OP_MODASN", "OP_ANDASN", "OP_XORASN", "OP_ORASN", "OP_SLASN", "OP_SRASN", 
		"OP_CAT", "RW_CASEOR", "RW_BREAK", "RW_RETURN", "RW_ELSE", "RW_WHILE", 
		"RW_IF", "RW_FOR", "RW_CONTINUE", "RW_DEFINE", "RW_DECLARE", "RW_DATABLOCK", 
		"RW_CASE", "RW_SWITCHSTR", "RW_SWITCH", "RW_DEFAULT", "RW_PACKAGE", "FLTCONST", 
		"VAR", "IDENT", "INTCONST", "BlockComment", "LineComment", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TS.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TSParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TSParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TSParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		public DeclContext[] decl() {
			return GetRuleContexts<DeclContext>();
		}
		public DeclContext decl(int i) {
			return GetRuleContext<DeclContext>(i);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__16) | (1L << T__17) | (1L << T__22) | (1L << T__23) | (1L << STRATOM) | (1L << TAGATOM) | (1L << RW_BREAK) | (1L << RW_RETURN) | (1L << RW_WHILE) | (1L << RW_IF) | (1L << RW_FOR) | (1L << RW_CONTINUE) | (1L << RW_DEFINE) | (1L << RW_DECLARE) | (1L << RW_DATABLOCK) | (1L << RW_SWITCHSTR))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (RW_SWITCH - 64)) | (1L << (RW_PACKAGE - 64)) | (1L << (FLTCONST - 64)) | (1L << (VAR - 64)) | (1L << (IDENT - 64)) | (1L << (INTCONST - 64)))) != 0)) {
				{
				{
				State = 62; decl();
				}
				}
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclContext : ParserRuleContext {
		public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		public Fn_decl_stmtContext fn_decl_stmt() {
			return GetRuleContext<Fn_decl_stmtContext>(0);
		}
		public Package_declContext package_decl() {
			return GetRuleContext<Package_declContext>(0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclContext decl() {
		DeclContext _localctx = new DeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_decl);
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
			case T__16:
			case T__17:
			case T__22:
			case T__23:
			case STRATOM:
			case TAGATOM:
			case RW_BREAK:
			case RW_RETURN:
			case RW_WHILE:
			case RW_IF:
			case RW_FOR:
			case RW_CONTINUE:
			case RW_DECLARE:
			case RW_DATABLOCK:
			case RW_SWITCHSTR:
			case RW_SWITCH:
			case FLTCONST:
			case VAR:
			case IDENT:
			case INTCONST:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68; stmt();
				}
				break;
			case RW_DEFINE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 69; fn_decl_stmt();
				}
				break;
			case RW_PACKAGE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 70; package_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Package_declContext : ParserRuleContext {
		public ITerminalNode RW_PACKAGE() { return GetToken(TSParser.RW_PACKAGE, 0); }
		public ITerminalNode IDENT() { return GetToken(TSParser.IDENT, 0); }
		public Fn_decl_stmtContext[] fn_decl_stmt() {
			return GetRuleContexts<Fn_decl_stmtContext>();
		}
		public Fn_decl_stmtContext fn_decl_stmt(int i) {
			return GetRuleContext<Fn_decl_stmtContext>(i);
		}
		public Package_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_package_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterPackage_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitPackage_decl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackage_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Package_declContext package_decl() {
		Package_declContext _localctx = new Package_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_package_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(RW_PACKAGE);
			State = 74; Match(IDENT);
			State = 75; Match(T__0);
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 76; fn_decl_stmt();
				}
				}
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==RW_DEFINE );
			State = 81; Match(T__1);
			State = 82; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fn_decl_stmtContext : ParserRuleContext {
		public ITerminalNode RW_DEFINE() { return GetToken(TSParser.RW_DEFINE, 0); }
		public ITerminalNode[] IDENT() { return GetTokens(TSParser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(TSParser.IDENT, i);
		}
		public Statement_listContext statement_list() {
			return GetRuleContext<Statement_listContext>(0);
		}
		public Var_listContext var_list() {
			return GetRuleContext<Var_listContext>(0);
		}
		public ITerminalNode OP_COLONCOLON() { return GetToken(TSParser.OP_COLONCOLON, 0); }
		public Fn_decl_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fn_decl_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterFn_decl_stmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitFn_decl_stmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFn_decl_stmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fn_decl_stmtContext fn_decl_stmt() {
		Fn_decl_stmtContext _localctx = new Fn_decl_stmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_fn_decl_stmt);
		int _la;
		try {
			State = 108;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; Match(RW_DEFINE);
				State = 85; Match(IDENT);
				State = 86; Match(T__3);
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==VAR) {
					{
					State = 87; var_list();
					}
				}

				State = 90; Match(T__4);
				State = 91; Match(T__0);
				State = 92; statement_list();
				State = 93; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95; Match(RW_DEFINE);
				State = 96; Match(IDENT);
				State = 97; Match(OP_COLONCOLON);
				State = 98; Match(IDENT);
				State = 99; Match(T__3);
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==VAR) {
					{
					State = 100; var_list();
					}
				}

				State = 103; Match(T__4);
				State = 104; Match(T__0);
				State = 105; statement_list();
				State = 106; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_listContext : ParserRuleContext {
		public ITerminalNode[] VAR() { return GetTokens(TSParser.VAR); }
		public ITerminalNode VAR(int i) {
			return GetToken(TSParser.VAR, i);
		}
		public Var_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterVar_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitVar_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_listContext var_list() {
		Var_listContext _localctx = new Var_listContext(Context, State);
		EnterRule(_localctx, 8, RULE_var_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(VAR);
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 111; Match(T__5);
				State = 112; Match(VAR);
				}
				}
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_listContext : ParserRuleContext {
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public Statement_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterStatement_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitStatement_list(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_listContext statement_list() {
		Statement_listContext _localctx = new Statement_listContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__16) | (1L << T__17) | (1L << T__22) | (1L << T__23) | (1L << STRATOM) | (1L << TAGATOM) | (1L << RW_BREAK) | (1L << RW_RETURN) | (1L << RW_WHILE) | (1L << RW_IF) | (1L << RW_FOR) | (1L << RW_CONTINUE) | (1L << RW_DECLARE) | (1L << RW_DATABLOCK) | (1L << RW_SWITCHSTR))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (RW_SWITCH - 64)) | (1L << (FLTCONST - 64)) | (1L << (VAR - 64)) | (1L << (IDENT - 64)) | (1L << (INTCONST - 64)))) != 0)) {
				{
				{
				State = 118; stmt();
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public If_stmtContext if_stmt() {
			return GetRuleContext<If_stmtContext>(0);
		}
		public While_stmtContext while_stmt() {
			return GetRuleContext<While_stmtContext>(0);
		}
		public For_stmtContext for_stmt() {
			return GetRuleContext<For_stmtContext>(0);
		}
		public Datablock_stmtContext datablock_stmt() {
			return GetRuleContext<Datablock_stmtContext>(0);
		}
		public Switch_stmtContext switch_stmt() {
			return GetRuleContext<Switch_stmtContext>(0);
		}
		public ITerminalNode RW_BREAK() { return GetToken(TSParser.RW_BREAK, 0); }
		public ITerminalNode RW_CONTINUE() { return GetToken(TSParser.RW_CONTINUE, 0); }
		public ITerminalNode RW_RETURN() { return GetToken(TSParser.RW_RETURN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Expression_stmtContext expression_stmt() {
			return GetRuleContext<Expression_stmtContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITSListener typedListener = listener as ITSListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITSVisitor<TResult> typedVisitor = visitor as ITSVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
